[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerotrust"
version = "0.1.0"
description = "A production-ready, generic zero-trust cryptographic protocol framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["cryptography", "zero-trust", "blockchain", "merkle", "zero-knowledge", "p2p"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "cryptography>=41.0.0",
    "ecdsa>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/zerotrust"
Documentation = "https://github.com/yourusername/zerotrust#readme"
Repository = "https://github.com/yourusername/zerotrust"
Issues = "https://github.com/yourusername/zerotrust/issues"

